--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "node  --watch src/index.js",
     "start": "node src/index.js",
@@ -17,5 +17,12 @@
     "dotenv": "16.5.0",
     "express": "5.1.0",
     "mysql2": "3.14.1"
+  },
+  "devDependencies": {
+    "morgan": "1.10.0",
+    "standard": "17.1.2"
+  },
+  "eslintConfig":{
+    "extends": "standard"
   }
 }
